Render all beta registers on home page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,37 @@
 @import 'govuk-elements';
 @import 'header-tweaks';
+
+// Override table font size
+table td,
+table th {
+  font-size: 16px;
+}
+
+// Override purple colour
+a:visited {
+  color: $govuk-blue;
+}
+
+.browse-list {
+  margin-bottom: 30px;
+
+  &__item {
+    list-style: none;
+
+    @include media(tablet) {
+      margin-bottom: 5px
+    }
+  }
+
+  &__link {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.2;
+    text-transform: none;
+
+     @include media(tablet) {
+      font-size: 24px;
+      line-height: 1.25;
+    }
+  }
+}
