--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,10 @@
 
 - content_for :content do
   %main#content{role:'main', tabindex: "-1"}
+    .phase-banner
+      %p
+        %strong.phase-tag ALPHA
+        %span This is a new service – your #{link_to 'feedback', '#'} will help us to improve it.
     = content_for?(:main) ? yield(:main) : yield
 
 - content_for :body_end do
