--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,7 +9,18 @@
 
 %h1.heading-large Find a register
 
-%ul.browse-list
-  - @registers.each do |register|
-    %li.browse-list__item
-      = link_to prepare_register_name(register.key), register.key, class: 'browse-list__link'
+.grid-row
+  .column-one-half
+    %h3.heading-medium Beta
+    %ul.browse-list
+      - @beta_registers.each do |register|
+        %li.browse-list__item
+          = link_to prepare_register_name(register[0]), "#{register[0]}?phase=beta", class: 'browse-list__link'
+
+  .column-one-half
+    %h1.heading-medium Alpha
+
+    %ul.browse-list
+      - @alpha_registers.each do |register|
+        %li.browse-list__item
+          = link_to prepare_register_name(register[0]), "#{register[0]}?phase=alpha", class: 'browse-list__link'
