--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,7 +85,22 @@ dl {
 }
 
 .form-group .form-control {
+  margin-top: 0;
   width: 100%;
+}
+
+select.form-control {
+  background-color: $white;
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='32' height='24' viewBox='0 0 32 24'><polygon points='0,0 32,0 16,24' style='fill: rgb%280, 0, 0%29'></polygon></svg>");
+  background-repeat: no-repeat;
+  background-position: center right 10px;
+  background-size: 10px;
+  border-radius: 0;
+  height: 38px;
+  padding-right: 30px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 .panel.phase {
