--- a/app/views/register/_record.html.haml
+++ b/app/views/register/_record.html.haml
@@ -1,4 +1,4 @@
-%tr{class: "js-filter-item", "data-filter-terms" => "#{record[1]['item'][0]['name']}"}
-  - @register_meta_data['register-record']['fields'].each do |item|
-    %td{class: item}
-      = record[1]['item'][0][item] || "<span class='unknown'>No data found</span>".html_safe
+%tr{class: "js-filter-item", "data-filter-terms" => record.instance_values.map { |key, value| value }.uniq }
+  - @register_meta_data['register-record']['fields'].each do |field|
+    %td{class: field}
+      = record.instance_variable_get('@' + field.gsub('-', '_')) || "<span class='unknown'>No data found</span>".html_safe
