--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -152,3 +152,36 @@ select.form-control {
     }
   }
 }
+
+.entries {
+  border-left: 10px solid $grey-3;
+  list-style-type: none;
+  padding-left: 30px;
+
+  &__item {
+    position: relative;
+    padding: 20px 0;
+
+    &:before {
+      background-color: $grey-3;
+      content: "";
+      display: block;
+      height: 10px;
+      left: -30px;
+      position: absolute;
+      width: 10px;
+    }
+  }
+
+  &__date {
+    color: $grey-1;
+    display: block;
+    font-size: 16px;
+    line-height: 1;
+    margin-bottom: 20px;
+  }
+
+  .heading-medium {
+    margin-top: 0;
+  }
+}
