--- a/app/views/register/entries.html.haml
+++ b/app/views/register/entries.html.haml
@@ -26,7 +26,12 @@
               %tr
                 %td= field
                 %td
-                %td= OpenRegister.item(params[:register], entry.item_hash).instance_variable_get('@' + field.gsub('-', '_'))
+                  - if record.entries.count > 1
+                    = OpenRegister.item(params[:register], record.entries[-1].item_hash).instance_variable_get('@' + field.gsub('-', '_')) || "<span class='unknown'>No data found</span>".html_safe
+                  - else
+                    = "<span class='unknown'>No data found</span>".html_safe
+                %td
+                  = OpenRegister.item(params[:register], entry.item_hash).instance_variable_get('@' + field.gsub('-', '_')) || "<span class='unknown'>No data found</span>".html_safe
 
 = content_for :head do
   %script{src: "//code.jquery.com/jquery-3.2.1.min.js"}
@@ -36,5 +41,3 @@
     jQuery(function($) {
       GOVUK.filterListItems.init();
     });
-
-= console
