--- a/app/views/register/entries.html.haml
+++ b/app/views/register/entries.html.haml
@@ -11,8 +11,9 @@
             %input{name: "search", id: "search", class: "form-control"}
 
 %ul.entries.js-filter-block
-  - @records.each do |record|
-    - record.entries.each do |entry|
+  - @records_with_entries.each do |record|
+    - record[:entries].each do |entry|
+      - puts entry.key
       %li.entries__item.js-filter-item{"data-filter-terms" => entry.key}
         %h3.heading-medium= entry.key
         %table
@@ -26,8 +27,8 @@
               %tr
                 %td= field
                 %td
-                  - if record.entries.count > 1
-                    = OpenRegister.item(params[:register], record.entries[-1].item_hash).instance_variable_get('@' + field.gsub('-', '_')) || "<span class='unknown'>No data found</span>".html_safe
+                  - if record[:entries].count > 1
+                    = OpenRegister.item(params[:register], record[:entries][-1].item_hash).instance_variable_get('@' + field.gsub('-', '_')) || "<span class='unknown'>No data found</span>".html_safe
                   - else
                     = "<span class='unknown'>No data found</span>".html_safe
                 %td
