--- a/app/views/register/entries.html.haml
+++ b/app/views/register/entries.html.haml
@@ -11,28 +11,26 @@
             %input{name: "search", id: "search", class: "form-control"}
 
 %ul.entries.js-filter-block
-  - @records_with_entries.each do |record|
-    - record[:entries].each do |entry|
-      - puts entry.key
-      %li.entries__item.js-filter-item{"data-filter-terms" => entry.key}
-        %h3.heading-medium= entry.key
-        %table
-          %thead
+  - @entries_with_items.each do |entry|
+    %li.entries__item.js-filter-item{"data-filter-terms" => entry[:key]}
+      %h3.heading-medium= entry[:key]
+      %table
+        %thead
+          %tr
+            %th Field
+            %th Old Value
+            %th New Value
+        %tbody
+          - @register_meta_data['register-record']['fields'].each do |field|
             %tr
-              %th Field
-              %th Old Value
-              %th New Value
-          %tbody
-            - @register_meta_data['register-record']['fields'].each do |field|
-              %tr
-                %td= field
-                %td
-                  - if record[:entries].count > 1
-                    = OpenRegister.item(params[:register], record[:entries][-1].item_hash).instance_variable_get('@' + field.gsub('-', '_')) || "<span class='unknown'>No data found</span>".html_safe
-                  - else
-                    = "<span class='unknown'>No data found</span>".html_safe
-                %td
-                  = OpenRegister.item(params[:register], entry.item_hash).instance_variable_get('@' + field.gsub('-', '_')) || "<span class='unknown'>No data found</span>".html_safe
+              %td= field
+              %td
+                - if entry[:previous_item]
+                  = entry[:previous_item][field] || "<span class='unknown'>No data found</span>".html_safe
+                - else
+                  = "<span class='unknown'>No data found</span>".html_safe
+              %td
+                = entry[:current_item][field] || "<span class='unknown'>No data found</span>".html_safe
 
 = content_for :head do
   %script{src: "//code.jquery.com/jquery-3.2.1.min.js"}
