--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,17 @@
   = stylesheet_link_tag 'application'
   = csrf_meta_tags
 
+- content_for :proposition_header do
+  .header-proposition
+    .content
+      = link_to 'Menu', '#proposition-links', class: 'js-header-toggle menu'
+      %nav{id: 'proposition-menu'}
+        %ul{id: "proposition-links"}
+          %li= link_to 'Using registers', 'https://registers.cloudapps.digital/using-registers'
+          %Li= link_to 'View registers', registers_path
+          %li= link_to 'Support', 'https://registers.cloudapps.digital/support'
+          %li= link_to 'Documentation', 'https://registers-docs.cloudapps.digital/'
+
 - content_for :content do
   = content_for?(:main) ? yield(:main) : yield
 
